# AgentLocal

./: .env  .env.example  .gitignore  Caddyfile  README.md  package-lock.json  package.json  setup.bat  setup.sh  signaltrade_info.json  signaltrade_raw.json  signaltrade_readme.json  start.bat  start_all.bat  tsconfig.tsbuildinfo  worklog.md
LEARN_DIR/: metrics.json
agent-ctx/: task1-zai-interface.md
agente_v14/: .gitignore  __init__.py  _helpers.py  app.py  bridge_api.py  check_gpu.py  cli.py  config.py  llm.py  migrate_vectors.py  pyproject.toml  requirements.txt  start.bat  start.sh
agente_v14/agent/: app_auto_pro.py  auto_evolve.py  circuit_breaker.py  deep_thinking.py  metacognition.py  middlewares.py  orchestrator.py  react.py  schemas.py
agente_v14/data/: file_watches.json  notifications.json  schedules.json
agente_v14/data/benchmarks/: baseline_test_run.json
agente_v14/data/translations/: en.json  es.json
agente_v14/mcp/: __init__.py  client.py
agente_v14/memory/: __init__.py  bm25.py  chroma_store.py  hybrid.py  learning.py  reranker.py  skill_memory.py  triple_memory.py  vectorstore.py
agente_v14/tests/: bench_search.py  conftest.py  test_bridge_api.py  test_config.py  test_e2e_pipeline.py  test_llm.py  test_memory.py  test_metacognition.py  test_metrics.py  test_react_agent.py  test_security.py  test_tools_security.py  test_web_security.py
agente_v14/tools/: __init__.py  api_integration.py  apps.py  archivos.py  auto_evolve_tool_module.py  avanzado.py  benchmarking.py  browser_automation.py  cloud.py  code_executor.py  codigo.py  crear_documentos.py  database_tool.py  datos.py  deployment_tool.py  diagramas.py  direct_intent.py  docker_sandbox.py  documentos.py  env_manager.py  error_recovery.py  file_editor.py  git_tool.py  integracion.py  model_router.py  multimedia.py  notifications.py  percepcion.py  project_scaffold.py  proyecto.py  registry.py  scheduler.py  schemas.py  sistema.py  skill_errors.py  skill_health.py  skill_loader.py  skill_pipeline.py  skill_router.py  subagentes.py  (+5 more)
agente_v14/utils/: __init__.py  helpers.py  i18n.py  metrics.py  security.py  token_manager.py
download/: Agente_Autonomo_v14_Guia_Refactoring.docx  Guia_Instalacion_Agente_Local.docx  agents_ts.json  analisis_busqueda_agente_v14.docx  app_auto_pro.py  apps_tree.json  cover.html  generate_analysis.py  generate_guide.js  generate_refactoring_pdf.py  generate_search_analysis.js  ia_bridge.py  maintainers.json  nexu_open_design.json  nexu_readme.json  nexu_readme2.json  nodever.json  package.json  packages_tree.json  pkg_dev.json  pkg_root.json  readme_raw.json  repo_main.json  repo_readme.json  story_raw.json  tools_tree.json  trading_agent.py  workspace_yaml.json
prisma/: schema.prisma
tool-results/: bash_1781223992278_76eaf6c6715b.txt  bash_1781226923037_501f220d983e.txt  bash_1781227071334_2900a22465fd.txt  bash_1781227171038_6d6f8c456114.txt  bash_1781229604847_6e9031d3a24b.txt  read_1781221187717_37a8c423703d.txt  read_1781221657631_c2c62d7ec66a.txt  read_1781221810499_91e54e1f757a.txt  read_1781222932144_92f7fca8c2ea.txt  read_1781223777658_aeadc1491f46.txt  read_1781223781598_052dbfe51978.txt  read_1781225817481_7d72b2044c09.txt  read_1781225818280_60fa50697b3e.txt  read_1781225823735_e9c8d30aaf6e.txt  read_1781229610836_662a61d5401b.txt  read_1781229672944_bf7c9e93b049.txt  read_1781229854920_49d4a95bfb73.txt  read_1781359169252_1915be7e8ce3.txt  read_1781359171373_49c63c0d5854.txt  read_1781359172267_9986749b6fe3.txt  read_1781360774634_8d5f0354ded4.txt  read_1781360889076_0dbbafcb2f49.txt  read_1781360896510_1e7960e6e974.txt  read_1781360896776_a632f3356983.txt  (+33 more)
(+86 files in other folders)
